<resources>
    <string name="app_name">TakeCare</string>
    <string name="app_name_caps">TAKE CARE</string>
    <string name="title_profile">Perfil</string>
    <string name="title_history">Historial</string>
    <string name="title_control">Medir</string>
    <string name="title_report">Reporte</string>
    <string name="title_advice">Consejos</string>
    <string name="menu_logout">Cerrar sesión</string>
    <string name="menu_change_pass">Cambiar contraseña</string>
    <string name="login_title">INICIAR SESIÓN</string>
    <string name="login_username_hint">Usuario</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="forget_password">¿Olvidó su contraseña?</string>
    <string name="login_button">Ingresar</string>
    <string name="login_register">Regístrate aquí</string>
    <string name="login_no_account">¿No tienes cuenta? </string>
    <string name="recover_title">Recuperar tu cuenta</string>
    <string name="recover_text">Ingresa el correo de la cuenta que deseas recuperar</string>
    <string name="recover_mail_hint">Correo electrónico</string>
    <string name="recover_button">Enviar</string>
    <string name="change_password_text">Ingrese el token enviado a su correo</string>
    <string name="password_hint">Contraseña nueva</string>
    <string name="new_password_hint">Confirma contraseña</string>
    <string name="recover_token_hint">Token</string>
    <string name="change_password_button">Confirmar</string>
    <string name="update_password_button">Aceptar</string>
    <string name="update_password_cancel">Cancelar</string>
    <string name="update_password_title">Cambiar contraseña</string>
    <string name="update_password_text">Ingrese su contraseña antigua y la contraseña nueva que desea tener.</string>
    <string name="update_password_hint">Contraseña actual</string>
    <string name="update_new_password_hint">Contraseña nueva</string>
    <string name="update_confirm_new_password_hint">Confirmar contraseña</string>
    <string name="register_title">Registro de usuario</string>
    <string name="register_name_text">Nombres</string>
    <string name="register_lastname_text">Apellidos</string>
    <string name="register_email_text">Correo electrónico</string>
    <string name="register_username_text">Nombre de usuario</string>
    <string name="register_birthday_text">Fecha de nacimiento</string>
    <string name="register_password_text">Contraseña</string>
    <string name="register_password_label">Mayor a 6 dígitos, 1 mayúscula y 1 número</string>
    <string name="register_confirm_password_text">Repetir contraseña</string>
    <string name="register_terms">Acepto los términos y condiciones de uso</string>
    <string name="register_btn">Registrar</string>
    <string name="history_date_hint">Día/Mes/Año</string>
    <string name="history_date_from">Fecha inicio</string>
    <string name="history_date_to">Fecha fin</string>
    <string name="history_default_hello">Hola usuario! \nSomos Take Care y estamos para ayudarte a cuidar tu salud mental.</string>
    <string name="history_card_title">Nivel de ansiedad - </string>
    <string name="history_card_subtitle">Frecuencia cardiaca</string>
    <string name="history_card_content">110 \nLPM</string>
    <string name="history_card_date">Fecha: </string>
    <string name="history_clear_filter">Limpiar filtros</string>
    <string name="control_text">Para medir tu frecuencia cardiaca, debes tener tu wearable vinculado a Take Care.</string>
    <string name="control_results_title">Frecuencia cardiaca</string>
    <string name="control_results_level">---</string>
    <string name="control_results">--- \nLPM</string>
    <string name="control_date">Fecha: ---</string>
    <string name="control_btn_med">Ingresar</string>
    <string name="control_btn_vin">Vincular</string>
    <string name="control_dialog_hint">Ritmo cardiaco</string>
    <string name="control_dialog_accept">Aceptar</string>
    <string name="advice_title">Te ofrecemos este espacio para que puedas relajarte y encontrar momentos de paz</string>
    <string name="advice_btn_quotes">Citas</string>
    <string name="advice_btn_treatments">Tratamiento</string>
    <string name="advice_btn_breath_methods">Métodos de respiración</string>
    <string name="advice_btn_relax_sounds">"Sonidos relajantes</string>
    <string name="advice_btn_information">Tips de relajación</string>
    <string name="report_title">Vamos a revisar tus mediciones para ver como te has sentido</string>
    <string name="report_date_hint">Día/Mes/Año</string>
    <string name="report_date_from">Fecha inicio</string>
    <string name="report_date_to">Fecha fin</string>
    <string name="report_card_title">Reporte de LPM</string>
    <string name="profile_change_image">Cambiar foto de perfil</string>
    <string name="profile_name_text">Nombres*</string>
    <string name="profile_lastname_text">Apellidos*</string>
    <string name="profile_email_text">Correo Electrónico*</string>
    <string name="profile_sex_text">Género</string>
    <string name="profile_birthday_text">Fecha de nacimiento*</string>
    <string name="profile_weight_text">Peso</string>
    <string name="profile_height_text">Talla</string>
    <string name="profile_weight_med">kg.</string>
    <string name="profile_height_med">cm.</string>
    <string name="profile_btn_mod">Actualizar</string>
    <string name="profile_change_pass">Cambiar contraseña</string>
    <string-array name="gender">
        <item>Seleccionar género</item>
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string name="information_title">Tips</string>
    <string name="information_text">Te ofrecemos tips para que puedas relajarte y disminuir la ansiedad</string>
    <string name="title1">¿Qué es la ansiedad?</string>
    <string name="text1">La ansiedad es una reacción adaptativa ante una preocupación futura que puede o no ocurrir asociada con la tensión muscular y el comportamiento de evitación. Es normal presentar ansiedad ante situaciones estresantes para la persona, como exponer o desarrollar evaluación. </string>
    <string name="title2">Descansar adecuadamente</string>
    <string name="text2">Dormir profundamente es el mejor ansiolítico para la ansiedad. Por ello se recomienda descansar de 7 a 8 horas diarias.</string>
    <string name="text3">Investigadores de UC Berkeley (Estados Unidos) han descubierto que el sueño profundo ayuda a calmar los estados de ansiedad, ya que ayuda a reorganizar las conexiones cerebrales, por lo que siempre que se duerma profundamente todos los días servirá como un ansiolítico natural.</string>
    <string name="title3">Alimentación sana</string>
    <string name="text4">Lo que comemos tiene efectos directos sobre cómo nos sentimos física y emocionalmente</string>
    <string name="title4">Conviene limitar el consumo de:</string>
    <string name="text5">Grasas, vísceras y charcutería: El consumo excesivo de grasas puede favorecer la obesidad y elevar los niveles de colesterol, poniendo bajo un esfuerzo innecesario al sistema cardiovascular.</string>
    <string name="text6">Estimulantes y alcohol: Algunos alimentos o bebidas que acompañan la comida pueden llevar sustancias que estimulan el sistema nervioso y sobre-activan al organismo, lo que puede provocar ansiedad, nerviosismo e insomnio.</string>
    <string name="text7">Sales y azúcar:  La sal disminuye las reservas de potasio de nuestro cuerpo, un mineral muy importante para el funcionamiento apropiado del sistema nervioso.</string>
    <string name="text8">Aditivos y otros productos artificiales: Existen muchos aditivos químicos utilizados en el procesamiento de comida industrial. No se conocen bien aún sus efectos sobre el organismo a largo plazo. Son productos que nuestro cuerpo procesa con más dificultad. </string>
    <string name="title5">Conviene poner en práctica</string>
    <string name="text9">Incluye proteínas en el desayuno. Si comes proteínas en el desayuno, puedes sentirte satisfecho durante más tiempo y la glucemia se mantendrá en niveles normales.</string>
    <string name="text10">Consume hidratos de carbono complejos. Se cree que los hidratos de carbono aumentan el nivel de serotonina en el cerebro, lo cual genera un efecto tranquilizante. Bebe mucha agua. Incluso una deshidratación leve puede afectar el estado de ánimo.</string>
    <string name="text11">Intenta consumir comidas equilibradas y saludables. La alimentación saludable es importante para la salud física y mental en general. Come muchas frutas y vegetales frescos, pero no en exceso. También ayuda comer regularmente pescados ricos en ácidos grasos omega-3, como el salmón.</string>
    <string name="title6">Realizar actividad física</string>
    <string name="text12">Hacer ejercicio y otras formas de actividad física sin duda alivia los síntomas de depresión o ansiedad, y puede hacerte sentir mejor. El ejercicio también puede evitar que regresen la depresión y la ansiedad cuando empiezas a sentirte mejor.</string>
    <string name="text13">Hacer al menos 30 minutos de ejercicio por día entre tres y cinco veces por semana puede mejorar de forma considerable los síntomas de depresión o de ansiedad. No obstante, las sesiones más breves de actividad física —entre 10 y 15 minutos cada una— puede marcar la diferencia. Mejorar tu estado de ánimo puede llevar menos tiempo de entrenamiento si haces actividades más intensas, como correr o andar en bicicleta.</string>
    <string name="title7">Métodos de distracción</string>
    <string name="text14">Si empleamos distracciones adecuadas podemos interrumpir, aunque sea temporalmente, el pensamiento que nos provoca ansiedad: parada de pensamiento, lectura, ocio, pasear, entre otros. Aplique estrategias de regulación emocional: Las técnicas de respiración, atención plena, el ejercicio físico, entre otras estrategias pueden ser útiles para la desactivación emocional, fisiológica y/o cognitiva.</string>
    <string name="sounds_title">Sonidos relajantes</string>
    <string name="sounds_text">Te ofrecemos una biblioteca de sonidos relajantes para que acompañen tu meditación.</string>
    <string name="sound_1_text">Sonidos de la selva y pájaros</string>
    <string name="sound_2_text">Sonidos del bosque</string>
    <string name="sound_3_text">Sonidos de mar y playa</string>
    <string name="sound_4_text">Sonidos del río</string>
    <string name="sound_5_text">Sonidos de fogata</string>
    <string name="sounds_1_url">https://firebasestorage.googleapis.com/v0/b/takecare-80b19.appspot.com/o/Audios%2FSonidos%20de%20la%20Selva%20Y%20Pjaros%20-%20Msica%20Relajante.mp3?alt=media&amp;token=63c32fab-fbbe-4393-b2c9-90d159e7f0ad</string>
    <string name="sounds_2_url">https://firebasestorage.googleapis.com/v0/b/takecare-80b19.appspot.com/o/Audios%2FSonidos%20del%20Bosque%20-%20Relajarse%20-%20Sonidos%20de%20la%20Naturaleza.mp3?alt=media&amp;token=1afc7222-911c-4377-8a39-e18facc120b7</string>
    <string name="sounds_3_url">https://firebasestorage.googleapis.com/v0/b/takecare-80b19.appspot.com/o/Audios%2FRelajarse%20Sonidos%20del%20Mar%20Playa%20HD%20-%20Relajacin.mp3?alt=media&amp;token=6be705cc-b665-44a9-8bfb-7d589f879692</string>
    <string name="sounds_4_url">https://firebasestorage.googleapis.com/v0/b/takecare-80b19.appspot.com/o/Audios%2FSONIDOS%20DEL%20RIO%20SONIDOS%20DE%20LA%20NATURALEZA%20RELAJANTES%20PARA%20ESTUDIAR%20TRABAJAR%20DORMIR%20NATURE.mp3?alt=media&amp;token=aee46714-eb26-47ba-a2e6-8ba04f77a42f</string>
    <string name="sounds_5_url">https://firebasestorage.googleapis.com/v0/b/takecare-80b19.appspot.com/o/Audios%2FSonidos%20de%20fogata%20naturaleza%20del%20bosque%20en%20la%20noche%20Para%20dormir%20profundamente.mp3?alt=media&amp;token=ae9e1722-5e79-4059-be82-4d04400ae783</string>
    <string name="breath_text">Te ofrecemos el siguiente método de respiración para disminuir la ansiedad</string>
</resources>