<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_control"
        android:icon="@drawable/ic_control"
        android:title="@string/title_control" />

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/ic_report"
        android:title="@string/title_report" />

    <item
        android:id="@+id/navigation_advice"
        android:icon="@drawable/ic_report"
        android:title="@string/title_advice" />
</menu>
