<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_history">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.takecare.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.takecare.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_control"
        android:name="com.example.takecare.ui.control.ControlFragment"
        android:label="@string/title_control"
        tools:layout="@layout/fragment_control" />

    <fragment
        android:id="@+id/navigation_report"
        android:name="com.example.takecare.ui.report.ReportFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/navigation_advice"
        android:name="com.example.takecare.ui.advice.AdviceFragment"
        android:label="@string/title_advice"
        tools:layout="@layout/fragment_advice" />
</navigation>
