<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment"
    android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/profile_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/circle"
            android:src="@drawable/ic_user_circle_solid" />

        <TextView
            android:id="@+id/profile_change_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/profile_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/profileImageTextColor"
            android:textSize="14sp"
            android:text="@string/profile_change_image"/>

        <!-- Nombre -->
        <EditText
            android:id="@+id/profile_name"
            android:textAlignment="textStart"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:background="@drawable/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/profileTextColor"
            android:hint="@string/profile_name_text"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/profile_change_image"
            app:layout_constraintStart_toStartOf="parent"
            android:importantForAutofill="no" />

        <!-- Apellido -->
        <EditText
            android:id="@+id/profile_lastname"
            android:textAlignment="textStart"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:background="@drawable/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/profileTextColor"
            android:hint="@string/profile_lastname_text"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/profile_name"
            app:layout_constraintStart_toStartOf="parent"
            android:importantForAutofill="no" />

        <!-- Email -->
        <EditText
            android:id="@+id/profile_email"
            android:textAlignment="textStart"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:background="@drawable/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/profileTextColor"
            android:hint="@string/profile_email_text"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/profile_lastname"
            app:layout_constraintStart_toStartOf="parent"
            android:importantForAutofill="no" />

        <!-- Sexo -->
        <Spinner
            android:id="@+id/profile_sex"
            android:textAlignment="textStart"
            android:background="@drawable/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/profileTextColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_email"
            android:entries="@array/gender"/>

        <!-- Cumpleaños -->
        <EditText
            android:id="@+id/profile_birthday"
            android:textAlignment="textStart"
            android:inputType="date"
            android:padding="10dp"
            android:background="@drawable/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/profileTextColor"
            android:clickable="true"
            android:focusable="false"
            android:cursorVisible="false"
            android:layout_marginTop="15dp"
            android:hint="@string/profile_birthday_text"
            android:importantForAutofill="no"
            app:layout_constraintTop_toBottomOf="@id/profile_sex"
            app:layout_constraintStart_toStartOf="parent"/>

        <!-- Peso -->
        <LinearLayout
            android:id="@+id/profile_weight_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_birthday">

            <EditText
                android:id="@+id/profile_weight"
                android:layout_marginEnd="10dp"
                android:gravity="start"
                android:textAlignment="textStart"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:background="@drawable/input"
                android:layout_width="90dp"
                android:layout_weight="0.9"
                android:layout_height="wrap_content"
                android:hint="@string/profile_weight_text"
                android:importantForAutofill="no" />

            <TextView
                android:layout_width="wrap_content"
                android:gravity="start|center"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:layout_weight="0.1"
                android:textColor="@color/profileTextColor"
                android:text="@string/profile_weight_med"/>
        </LinearLayout>

        <!-- Talla -->
        <LinearLayout
            android:id="@+id/profile_height_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_weight_layout">

            <EditText
                android:id="@+id/profile_height"
                android:layout_marginEnd="10dp"
                android:gravity="start|center"
                android:textAlignment="textStart"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:layout_weight="0.9"
                android:background="@drawable/input"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:hint="@string/profile_height_text"
                android:importantForAutofill="no" />

            <TextView
                android:layout_width="wrap_content"
                android:gravity="start|center"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:layout_weight="0.1"
                android:textColor="@color/profileTextColor"
                android:text="@string/profile_height_med"/>
        </LinearLayout>

        <Button
            android:id="@+id/profile_btn"
            android:background="@drawable/button_enabled"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/defaultTextColorWhite"
            android:text="@string/profile_btn_mod"
            android:textSize="18sp"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_height_layout"/>

        <ProgressBar
            android:id="@+id/profile_progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:indeterminate="true"
            android:progress="100"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_height_layout" />

        <TextView
            android:id="@+id/profile_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/profile_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text=""
            android:textStyle="bold"
            android:textColor="@color/redTextColor"/>

        <Button
            android:id="@+id/profile_change_pass_btn"
            android:background="@drawable/button_enabled"
            android:backgroundTint="@color/button_second_color"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="@color/defaultTextColorWhite"
            android:text="@string/profile_change_pass"
            android:textSize="18sp"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_error_text"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
