<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.login.ChangePasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/recover_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="110dp"
        android:background="@color/loginToolbar"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/recover_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_caps"
            android:layout_gravity="center"
            android:textColor="@color/defaultTextColorWhite"
            android:textStyle="bold"
            android:textSize="40sp"/>
    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/control_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingStart="35dp"
        android:paddingEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/recover_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"
        android:textColor="@color/controlTextColor"
        android:text="@string/change_password_text"/>

    <EditText
        android:id="@+id/change_new_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/control_title"
        android:background="@drawable/rounded_rectangle"/>

    <EditText
        android:id="@+id/change_confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="textPassword"
        android:hint="@string/new_password_hint"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/change_new_password"
        android:background="@drawable/rounded_rectangle"/>


    <EditText
        android:id="@+id/recovery_token"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:drawableStart="@drawable/ic_key_black_24dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="text"
        android:hint="@string/recover_token_hint"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/change_confirm_new_password"
        android:background="@drawable/rounded_rectangle"/>

    <Button
        android:id="@+id/change_confirm_btn"
        android:background="@drawable/button_enabled"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:textColor="@color/defaultTextColorWhite"
        android:text="@string/change_password_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recovery_token"/>

    <ProgressBar
        android:id="@+id/change_password_progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:indeterminate="true"
        android:progress="100"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recovery_token" />

    <TextView
        android:id="@+id/change_password_error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/change_confirm_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text=""
        android:textStyle="bold"
        android:textColor="@color/redTextColor"/>

</androidx.constraintlayout.widget.ConstraintLayout>